update till BMI Calculator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,16 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-160.0.dev <4.0.0'
+  sdk: '>=3.1.0-63.1.beta <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  transition: ^2.0.2
+  google_fonts: ^5.0.0
+  fluttertoast: ^8.2.2
+
 
 
 dev_dependencies:
