--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   transition: ^2.0.2
   google_fonts: ^5.0.0
   fluttertoast: ^8.2.2
+  sqflite: ^2.2.8+4
+  path_provider: ^2.0.15
 
 
 
